# vectorized-physics-citations

./: .gitignore  README.md  cli.py  instructions.md  requirements.txt  setup.py
configs/: default.yaml
cpp_embedder/: CMakeLists.txt  README.md
cpp_embedder/cmake/: CppEmbedderConfig.cmake.in
cpp_embedder/docs/: ARCHITECTURE.md  BUILD.md  USAGE.md
cpp_embedder/docs/architecture/: overview.md  system-diagram.md
cpp_embedder/docs/decisions/: tech-stack.md
cpp_embedder/docs/interfaces/: cpp-api.md  python-bindings.md  weight-format.md
cpp_embedder/include/bindings/: c_api.h
cpp_embedder/include/cli/: args.hpp
cpp_embedder/include/math/: ops.hpp  tensor.hpp
cpp_embedder/include/model/: embedder.hpp  layers.hpp  weights.hpp
cpp_embedder/include/tokenizer/: tokenizer.hpp  vocab.hpp
cpp_embedder/python/: setup.py
cpp_embedder/python/cpp_embedder/: __init__.py  embedder.py  embedder.pyi
cpp_embedder/schemas/: weight_format.json
cpp_embedder/src/bindings/: c_api.cpp
cpp_embedder/src/cli/: args.cpp  main.cpp
cpp_embedder/src/math/: ops.cpp  tensor.cpp
cpp_embedder/src/model/: embedder.cpp  layers.cpp  weights.cpp
cpp_embedder/src/tokenizer/: tokenizer.cpp  vocab.cpp
cpp_embedder/tests/: test_layers.cpp  test_math.cpp  test_tokenizer.cpp
cpp_embedder/tools/: convert_weights.py
data/: __init__.py  arxiv_fetcher.py  preprocessor.py  semantic_scholar.py
evaluation/: __init__.py  metrics.py
experiments/: compare_embedders.py  run_experiment.py  verify_cpp_embedder.py
models/: __init__.py  embedder.py  search_index.py
projects/: vectorized-physics-citations.html
results/: embeddings.npy  metadata.parquet
results/data/: citations.parquet
results/plots/: evaluation_results.json  umap_projection.npy
utils/: __init__.py  config.py  network_viz.py  visualization.py
